# crawling-sigma-chan

./: README.md  pyproject.toml
crawling_sigma_chan/components/operators/: __init__.py  tumblr_pictures.py
crawling_sigma_chan/data_structure/: __init__.py  tumblr_parameters.py
database/components/operators/: data_base_engine.py
database/data_structure/: __init__.py  data_base_parameters.py
tests/crawling_sigma_chan/components/operators/: test_tumblr_pictures.py
tests/crawling_sigma_chan/data_structure/: test_tumblr_parameters.py
