[tool.poetry]
name = "tumblr-getter-robo"
version = "0.0.0"
description = "Sigma-chan is crawling in the internets!!!"
authors = ["sakairi-nobuyuki <SAKAIRI.Nobuyuki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
pytest = "^7.0.1"
requests = "^2.27.1"
SQLAlchemy = "^1.4.31"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
